# backend/openapi.json
@@ -6748,14 +6748,14 @@
             "title": "Comments Count",
             "type": "integer"
           },
-          "username": {
-            "maxLength": 127,
-            "title": "Username",
-            "type": "string"
-          },
           "date_created": {
             "format": "date-time",
             "title": "Date Created",
+            "type": "string"
+          },
+          "username": {
+            "maxLength": 127,
+            "title": "Username",
             "type": "string"
           }
         },
@@ -6766,6 +6766,7 @@
           "revisions_count",
           "posts_count",
           "comments_count",
+          "date_created",
           "username"
         ],
         "title": "ProfileIndexSchema",
